--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -92,7 +92,7 @@
 
             <!-- ***** Right-Menu Button Section ***** -->
             <section class="right-small right">
-              <a class="right-off-canvas-toggle menu-icon" href="#"><span></span></a>
+              <a class="menu-icon DRO-button" href="#"><span></span></a>
             </section>
           </nav>
 
@@ -115,7 +115,7 @@
             </div>
           </aside>
 
-          <aside class="right-off-canvas-menu" id="right-menu">
+          <aside class="DRO" id="right-menu">
 
             <!-- ********** Tool Position Widget ********** -->
             <div id="position" class="widget">
