Improvements from alex to the previewer.

--- a/dashboard/apps/previewer.fma/index.html
+++ b/dashboard/apps/previewer.fma/index.html
@@ -63,8 +63,7 @@
         if('job' in args) {
           var url = '/job/' + args.job + '/file';
           $.get(url,function(data, status) {
-              viewer.setGCode(data);
-              viewer.viewPaths();
+              viewer.setGCode(data, viewer.viewPaths);
           });
         }
       });
