Remove duplicate networks.  Fix appearance of rows in network manager

--- a/dashboard/apps/network_manager.fma/index.html
+++ b/dashboard/apps/network_manager.fma/index.html
@@ -100,13 +100,13 @@
                 defaultContent: '',
             },
             {
-              className: 'ssid',
+              className: 'ssid noselect',
               orderable:      false,
             	data : "ssid", 
             	defaultContent : '', 
             },
             { 
-              className: 'security',
+              className: 'security noselect',
               orderable:      false,
             	data : "security", 
             	defaultContent : '',
