--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -40,12 +40,56 @@
 		<div class="hoverdim">
 			<div class="row title">
 				<div class="small-4 columns">
+					<h4>Up Next</h4>
+				</div>
+			</div>
+			<div class="row ">
+				<div class="small-6 columns">
+					<h4 class='nextJobTitle'></h4>
+					<div class="small-12 columns">
+						<h5 class='nextJobDesc'></h5>
+					</div>
+				</div>
+					<div class="small-6 columns" style="text-align:right;">
+						<img class='nextJobPrev' id="run-next" src="css/images/player6.png">
+					</div>
+				
+			</div>
+			<div class="rows small-12 icon-row">
+				<div class="small-1 columns">
+					<a class='preview'  title='Preview Job'>
+						<img src="css/images/visible9 (3).png">
+					</a>
+				</div>
+				<div class="small-1 columns">
+					<a class='edit'  title='Edit Job'>
+						<img src="css/images/settings46.png">
+					</a>
+				</div>
+				<div class="small-1 columns">
+					<a class='download'  title='Download Job'>
+						<img src="css/images/download151.png">
+					</a>
+				</div>
+				<div class="small-1 columns">
+					<a class='cancel' title='Cancel Job'>
+						<img src="css/images/recycle.png">
+					</a>	
+				</div>
+			  <div class="sm-1 columns"></div>
+			</div>
+			<div class="row"></div>
+		</div>
+		</section>
+		<section class="container">
+			<div class="row title">
+				<div class="small-4 columns">
 					<h4>Pending</h4>
 				</div>
 				<div class="small-8 columns" style="text-align:right;">
-					<a id="run-next" class="small button success radius">Run Next</a>
 					<a id="clear-jobs" class="small button secondary radius">Clear Queue</a>
 				</div>
+	
 			</div> 
 
 			<div class="row no-jobs" style="display:none;">
@@ -70,7 +114,6 @@
 	        	</thead>
 	        	</table>
 			</div>
-		</div>
 	</section>
   </div>
 
@@ -222,6 +265,20 @@
 
 	
 	// DataTable
+	var setNextJob = function (arr) {
+		console.log(arr);
+		if (arr == undefined ) {
+			$('.nextJobTitle').text('No Jobs Pending');
+			$('.nextJobDesc').text('Drag files here or click "Submit Job"');
+		} else {
+			$('.cancel').data('id', arr._id);
+			$('.preview').data('id', arr._id);
+			$('.download').data('id', arr._id);
+			$('.edit').data('id', arr._id);
+			$('.nextJobTitle').text(arr.name);
+			$('.nextJobDesc').text(arr.description);
+		}
+	}
 
   var queue_table = $('#queue_table').DataTable( {
     "filter": false,
@@ -235,8 +292,12 @@
         "ajax": {
         "url" : "/jobs/queue",
         "dataSrc" : function(json) { 
-        return json.data.jobs; }
+			var arr = json.data.jobs.shift();
+			console.log('i reloaded');
+			setNextJob(arr);
+        	return json.data.jobs;}
         },
+		
         "columns": [
             {
                 "className":      'details-control',
@@ -268,6 +329,26 @@
         ],
         "order" : [[3,"desc"]]
     }); // DataTable
+	
+		$('.cancel').on('click', function(e) {
+			var jobId = $(this).data('id');
+			fabmoDashboard.cancelJob(jobId, function(err, data) {
+					
+			});
+			setTimeout(function(){ refresh_jobs_list() }, 500);
+		});
+		$('.preview').on('click', function(e) {
+			var jobId = $(this).data('id');
+			fabmoDashboard.launchApp('previewer', {'job' : jobId});
+		});
+		$('.edit').on('click', function(e) {
+			var jobId = $(this).data('id');
+			fabmoDashboard.launchApp('editor', {'job' : jobId});
+		});
+		$('.download').on('click', function(e) {
+			var jobId = $(this).data('id');
+			$('.download').attr({'href':'/job/' + jobId + '/file'});
+		});	
 	
 	// Add event listener for opening and closing details 
     $('#queue_table tbody').on('click', 'div.ellipses', function () {
@@ -409,7 +490,7 @@
  		}
     });
 
-	function refresh_jobs_list(){
+	var refresh_jobs_list = function (){
 		queue_table.ajax.reload();
 		history_table.ajax.reload();
 	}
