More improvements to network state, cleanup logging

--- a/dashboard/apps/network_manager.fma/index.html
+++ b/dashboard/apps/network_manager.fma/index.html
@@ -55,11 +55,10 @@
     <form id="passwd-form">
         <div class="row">
             <label for="password">Passphrase</label>
-            <input type="password" name="password" />
+            <input type="text" name="password" />
         </div>
         <div class="row">
              <div class="right">
-                 <button type="reset" class="button radius alert">Reset</button>
                  <button type="submit" class="button radius">Connect</button>
              </div>
          </div>
