Fix submission of apps via dragndrop.  No stop events if keypad disabled.  Add notifications in app manager.  Some cleanup.

--- a/dashboard/apps/app_manager.fma/index.html
+++ b/dashboard/apps/app_manager.fma/index.html
@@ -108,7 +108,13 @@
 
   		$('#file').change(function(evt) {
 			fabmoDashboard.submitApp($('#fileform'), {}, function(err, data) {
+				if(err) {
+					fabmoDashboard.notify('error', JSON.stringify(err));
+				} else {
+					fabmoDashboard.notify('success', "App installed successfully.");
+				}
 				refreshApps();
+
 			});
 		});
 
@@ -127,9 +133,15 @@
 				try {
 					file = evt.originalEvent.dataTransfer.files[0];
 					fabmoDashboard.submitApp(file, {}, function(err, data) {
-						if(err){alert(err);return;}
+						if(err) {
+							fabmoDashboard.notify('error', JSON.stringify(err));
+						} else {
+							fabmoDashboard.notify('success', "App installed successfully.");
+						}
 						refreshApps();
 					});
+				} catch(e) {
+					console.error(e);
 				}
 				finally {
 					$('#dropzone').removeClass('hover');
