Fix button wierdness in menus

--- a/dashboard/apps/editor.fma/index.html
+++ b/dashboard/apps/editor.fma/index.html
@@ -26,24 +26,24 @@
       <!-- Left Nav Section -->
       <ul class="left">
         <li class="has-dropdown hidden" id="macro-menu">
-          <a href="#">Macro</a>
+          <a href="#macromenu">Macro</a>
           <ul class="dropdown">
-            <li><a id="macro-save" href="#">Save</a></li>
-            <li><a id="macro-save-and-close" href="#">Save and Close</a></li>          
+            <li><a id="macro-save" href="#macrosave">Save</a></li>
+            <li><a id="macro-save-and-close" href="#macrosaveandclose">Save and Close</a></li>          
           </ul>        
         </li>
         <li class="has-dropdown language-dropdown"> 
-          <a href="#">Language</a>
+          <a href="#languagemenu">Language</a>
           <ul class="dropdown">
-            <li><a id="lang-opensbp" href="#">OpenSBP</a></li>
-            <li><a id="lang-gcode" href="#">G-Code</a></li>
+            <li><a id="lang-opensbp" href="#languageopensbp">OpenSBP</a></li>
+            <li><a id="lang-gcode" href="#languagegcode">G-Code</a></li>
           </ul>
         </li>
         <li class="has-dropdown"> 
-          <a href="#" class="success">Execute</a>
+          <a href="#executemenu" class="success">Execute</a>
           <ul class="dropdown"> 
-            <li><a id="submit-immediate" href="#">Run Immediately (Ctrl+Enter)</a></li>
-            <li><a id="submit-job" href="#">Submit as Job</a></li>
+            <li><a id="submit-immediate" href="#submitimmediate">Run Immediately (Ctrl+Enter)</a></li>
+            <li><a id="submit-job" href="#submitasjob">Submit as Job</a></li>
           </ul>
         </li> 
       </ul>
